--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,5 @@
-$font-primary: 'RF Dewi Extended';
-
-$color-black: #050012;
+:root {
+  --font-primary: 'RF Dewi Extended';
+  
+  --color-black: #050012;
+}
