--- a/src/components/uikit/AppBubble/AppBubble.module.scss
+++ b/src/components/uikit/AppBubble/AppBubble.module.scss
@@ -8,7 +8,9 @@
   border: 0.1rem solid;
   border-radius: 50%;
   border-color: var(--color-orange);
-  transition: 0.2s;
+  transition-property: transform, border-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
   overflow: hidden;
   /* @include onlyHover {
     background-color: var(--color-orange);
@@ -42,7 +44,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    transition: 0.2s;
+    transition: opacity 0.2s ease-in-out;
     z-index: -1;
   }
   &[class~='active'] {
@@ -78,10 +80,10 @@
       position: absolute;
       top: 7.6rem;
       opacity: 0;
-      transition: 0.4s;
+      transition: opacity 0.4s ease-in-out;
     }
     svg {
-      transition: 0.2s;
+      transition: opacity 0.2s ease-in-out;
     }
   }
 }
