--- a/src/components/uikit/AppRadio/AppRadioOption/AppRadioOption.module.scss
+++ b/src/components/uikit/AppRadio/AppRadioOption/AppRadioOption.module.scss
@@ -8,7 +8,9 @@
   justify-content: center;
   border: 0.1rem solid #fff;
   border-radius: 4.4rem;
-  transition: 0.2s;
+  transition-duration: 0.2s;
+  transition-property: background-color, border-color, color;
+  transition-timing-function: ease-in-out;
   cursor: pointer;
   &:not(&--checked) {
     @include onlyHover {
