--- a/src/scss/mixins/a.scss
+++ b/src/scss/mixins/a.scss
@@ -8,9 +8,10 @@
   letter-spacing: 0.06em;
   padding: 2rem 4rem;
   border-radius: 5.2rem;
-  transition: 0.4s;
+  transition: background-color 0.4s ease-in-out;
   background-color: var(--color-button);
   @include onlyHover {
     background-color: var(--color-red);
+    color: #fff;
   }
 }
